--- a/ush/templates/parm/metplus/GridDiag_REFC.conf
+++ b/ush/templates/parm/metplus/GridDiag_REFC.conf
@@ -25,6 +25,8 @@ INIT_BEG={ENV[INIT_BEG]}
 # End time for METplus run - must match INIT_TIME_FMT
 INIT_END={ENV[INIT_END]}
 
+SEASON={ENV[SEASON]}
+
 # Increment between METplus runs (in seconds if no units are specified)
 #  Must be >= 60 seconds
 INIT_INCREMENT = {ENV[INIT_INC]}
@@ -51,17 +53,17 @@ GRID_DIAG_CONFIG_FILE = {CONFIG_DIR}/GridDiagConfig
 
 BOTH_VAR1_NAME = REFC 
 BOTH_VAR1_LEVELS = L0
-BOTH_VAR1_OPTIONS = cnt_thresh = [ >15 ]; n_bins = 18; range  = [-20, 70];
+BOTH_VAR1_OPTIONS = cnt_thresh = [ >15 ]; n_bins = 90; range  = [-20, 70];
 
 BOTH_VAR2_NAME = MergedReflectivityQCComposite
 BOTH_VAR2_LEVELS = Z500 
-BOTH_VAR2_OPTIONS = censor_thresh = lt-20.0; censor_val = -20.0; cnt_thresh = [ >15 ]; n_bins = 18; range  = [-20, 70];
+BOTH_VAR2_OPTIONS = censor_thresh = lt-20.0; censor_val = -20.0; cnt_thresh = [ >15 ]; n_bins = 90; range  = [-20, 70];
 
 # The following variables set values in the MET
 # configuration file used by this example
 # Leaving these values commented will use the value
 # found in the default MET configuration file
-GRID_DIAG_REGRID_TO_GRID = FCST 
+GRID_DIAG_REGRID_TO_GRID = /scratch2/BMC/fv3lam/RRFS_baseline/static/MET/masks/CONUS.nc 
 #GRID_DIAG_REGRID_METHOD = BUDGET 
 #GRID_DIAG_REGRID_WIDTH = 2 
 #GRID_DIAG_REGRID_VLD_THRESH = 0.5
@@ -77,9 +79,10 @@ GRID_DIAG_OUTPUT_DIR = {OUTPUT_BASE}
 
 [filename_templates]
 
-GRID_DIAG_INPUT_TEMPLATE = expt_dirs/RRFS_baseline_summer/{init?fmt=%Y%m%d%H}/postprd/{ENV[NET]}.t{init?fmt=%H}z.bgdawpf{lead?fmt=%HHH}.tm{init?fmt=%H}.grib2, obs_data/mrms/proc/{valid?fmt=%Y%m%d}/MergedReflectivityQCComposite_00.50_{valid?fmt=%Y%m%d}-{valid?fmt=%H}0000.grib2
+#GRID_DIAG_INPUT_TEMPLATE = expt_dirs/RRFS_baseline_summer/{init?fmt=%Y%m%d%H}/postprd/{ENV[NET]}.t{init?fmt=%H}z.bgdawpf{lead?fmt=%HHH}.tm{init?fmt=%H}.grib2, obs_data/mrms/proc/{valid?fmt=%Y%m%d}/MergedReflectivityQCComposite_00.50_{valid?fmt=%Y%m%d}-{valid?fmt=%H}0000.grib2
+GRID_DIAG_INPUT_TEMPLATE = expt_dirs/RRFS_baseline_{SEASON}/{init?fmt=%Y%m%d%H}/postprd/{ENV[NET]}.t{init?fmt=%H}z.bgdawpf{lead?fmt=%HHH}.tm{init?fmt=%H}.grib2, obs_data/mrms/proc/{valid?fmt=%Y%m%d}/MergedReflectivityQCComposite_00.50_{valid?fmt=%Y%m%d}-{valid?fmt=%H}0000.grib2
 
-GRID_DIAG_OUTPUT_TEMPLATE = grid_diag_out_{MODEL}_{ENV[INIT_BEG]}-{ENV[INIT_END]}_f{ENV[FHR_FIRST]}-{ENV[FHR_LAST]}.nc
+GRID_DIAG_OUTPUT_TEMPLATE = grid_diag_out_{MODEL}_{BOTH_VAR1_NAME}-obs_{ENV[INIT_BEG]}-{ENV[INIT_END]}_f{ENV[FHR_FIRST]}-{ENV[FHR_LAST]}.nc
 #when using RUN_ONCE
 #GRID_DIAG_OUTPUT_TEMPLATE = grid_diag_out_{MODEL}_{init?fmt=%Y%m%d%H}.nc when using RUN_ONCE_PER_INIT_OR_VALID
 #GRID_DIAG_OUTPUT_TEMPLATE = grid_diag_out_{MODEL}_{lead?fmt=%3H}.nc
