--- a/ush/config_defaults.yaml
+++ b/ush/config_defaults.yaml
@@ -538,7 +538,7 @@ workflow:
   #
   #-----------------------------------------------------------------------
   #
-  EXPT_CONFIG_FN: "config.sh"
+  EXPT_CONFIG_FN: "config.yaml"
   CONSTANTS_FN: "constants.sh"
   
   RGNL_GRID_NML_FN: "regional_grid.nml"
