Add description to default config.

--- a/ush/config_defaults.yaml
+++ b/ush/config_defaults.yaml
@@ -1,14 +1,9 @@
-#
-#-----------------------------------------------------------------------
-#
-# This file sets the experiment's configuration variables (which are
-# global shell variables) to their default values.  For many of these
-# variables, the valid values that they may take on are defined in the
-# file $USHDIR/valid_param_vals.sh.
-#
-#-----------------------------------------------------------------------
-#
-
+#----------------------------
+# Test description
+#----------------------------
+description: >-
+  Default configuration for an experiment. The valid values each parameter
+  takes are specified in valid_param_vals.yaml
 #----------------------------
 # USER config parameters
 #----------------------------
