--- a/tests/WE2E/test_configs/wflow_features/config.custom_ESGgrid.yaml
+++ b/tests/WE2E/test_configs/wflow_features/config.custom_ESGgrid.yaml
@@ -5,7 +5,6 @@ description: >-
 user:
   RUN_ENVIR: community
 workflow:
-  POST_OUTPUT_DOMAIN_NAME: custom_ESGgrid
   DATE_FIRST_CYCL: '20190701'
   DATE_LAST_CYCL: '20190701'
   CYCL_HRS:
@@ -50,3 +49,5 @@ task_run_make_grid:
   ESGgrid_PAZI: '0.0'
 task_run_make_ics:
   CCPP_PHYS_SUITE: FV3_GFS_2017_gfdlmp_regional
+task_run_post:
+  POST_OUTPUT_DOMAIN_NAME: custom_ESGgrid
