--- a/tests/WE2E/test_configs/wflow_features/config.custom_GFDLgrid__GFDLgrid_USE_GFDLgrid_RES_IN_FILENAMES_eq_TRUE.yaml
+++ b/tests/WE2E/test_configs/wflow_features/config.custom_GFDLgrid__GFDLgrid_USE_GFDLgrid_RES_IN_FILENAMES_eq_TRUE.yaml
@@ -9,7 +9,6 @@ description: >-
 user:
   RUN_ENVIR: community
 workflow:
-  POST_OUTPUT_DOMAIN_NAME: custom_GFDLgrid
   DATE_FIRST_CYCL: '20190701'
   DATE_LAST_CYCL: '20190701'
   CYCL_HRS:
@@ -54,3 +53,5 @@ task_run_make_grid:
   GFDLgrid_USE_GFDLgrid_RES_IN_FILENAMES: 'TRUE'
 task_run_make_ics:
   CCPP_PHYS_SUITE: FV3_GFS_2017_gfdlmp
+task_run_post:
+  POST_OUTPUT_DOMAIN_NAME: custom_GFDLgrid
