Add function to load structured shell config, put description under metadata

--- a/tests/WE2E/test_configs/grids_extrn_mdls_suites_community/config.grid_RRFS_CONUS_25km_ics_NAM_lbcs_NAM_suite_HRRR.yaml
+++ b/tests/WE2E/test_configs/grids_extrn_mdls_suites_community/config.grid_RRFS_CONUS_25km_ics_NAM_lbcs_NAM_suite_HRRR.yaml
@@ -1,7 +1,8 @@
-description: >-
-  This test is to ensure that the workflow running in community mode
-  completes successfully on the RRFS_CONUS_25km grid using the HRRR
-  physics suite with ICs and LBCs derived from the NAM.
+metadata:
+  description: >-
+    This test is to ensure that the workflow running in community mode
+    completes successfully on the RRFS_CONUS_25km grid using the HRRR
+    physics suite with ICs and LBCs derived from the NAM.
 user:
   RUN_ENVIR: community
 workflow:
