--- a/tests/WE2E/test_configs/wflow_features/config.custom_ESGgrid.yaml
+++ b/tests/WE2E/test_configs/wflow_features/config.custom_ESGgrid.yaml
@@ -1,7 +1,8 @@
-description: >-
-  This test checks the capability of the workflow to have the user
-  specify a new grid (as opposed to one of the predefined ones in the
-  workflow) of ESGgrid type.
+metadata:
+  description: >-
+    This test checks the capability of the workflow to have the user
+    specify a new grid (as opposed to one of the predefined ones in the
+    workflow) of ESGgrid type.
 user:
   RUN_ENVIR: community
 workflow:
