--- a/tests/WE2E/test_configs/wflow_features/config.specify_DT_ATMOS_LAYOUT_XY_BLOCKSIZE.yaml
+++ b/tests/WE2E/test_configs/wflow_features/config.specify_DT_ATMOS_LAYOUT_XY_BLOCKSIZE.yaml
@@ -1,7 +1,8 @@
-description: >-
-  This test checks the capability of the workflow to have the forecast
-  model's time step (DT_ATMOS), its MPI layout (LAYOUT_X and LAYOUT_Y),
-  and its cache block size be set to user-specified values.
+metadata:
+  description: >-
+    This test checks the capability of the workflow to have the forecast
+    model's time step (DT_ATMOS), its MPI layout (LAYOUT_X and LAYOUT_Y),
+    and its cache block size be set to user-specified values.
 user:
   RUN_ENVIR: community
 workflow:
