--- a/tests/WE2E/test_configs/wflow_features/config.subhourly_post.yaml
+++ b/tests/WE2E/test_configs/wflow_features/config.subhourly_post.yaml
@@ -1,6 +1,7 @@
-description: >-
-  This test checks the capability of the workflow to have the model write
-  output files and perform post-processing on a sub-hourly time interval.
+metadata:
+  description: >-
+    This test checks the capability of the workflow to have the model write
+    output files and perform post-processing on a sub-hourly time interval.
 user:
   RUN_ENVIR: community
 workflow:
