--- a/tests/WE2E/test_configs/grids_extrn_mdls_suites_community/config.grid_CONUS_25km_GFDLgrid_ics_FV3GFS_lbcs_FV3GFS_suite_GFS_v16.yaml
+++ b/tests/WE2E/test_configs/grids_extrn_mdls_suites_community/config.grid_CONUS_25km_GFDLgrid_ics_FV3GFS_lbcs_FV3GFS_suite_GFS_v16.yaml
@@ -1,8 +1,9 @@
-description: >-
-  This test is to ensure that the workflow running in community mode
-  completes successfully on the CONUS_25km_GFDLgrid grid (which is a
-  GFDLgrid type of grid) using the GFS_v16 suite with ICs and LBCs
-  derived from the FV3GFS.
+metadata:
+  description: >-
+    This test is to ensure that the workflow running in community mode
+    completes successfully on the CONUS_25km_GFDLgrid grid (which is a
+    GFDLgrid type of grid) using the GFS_v16 suite with ICs and LBCs
+    derived from the FV3GFS.
 user:
   RUN_ENVIR: community
 workflow:
