--- a/tests/WE2E/test_configs/grids_extrn_mdls_suites_community/config.grid_RRFS_CONUS_25km_ics_FV3GFS_lbcs_RAP_suite_HRRR.yaml
+++ b/tests/WE2E/test_configs/grids_extrn_mdls_suites_community/config.grid_RRFS_CONUS_25km_ics_FV3GFS_lbcs_RAP_suite_HRRR.yaml
@@ -1,11 +1,12 @@
-description: >-
-  This test is to ensure that the workflow running in community mode
-  completes successfully on the RRFS_CONUS_25km grid using the HRRR
-  physics suite with ICs derived from the FV3GFS and LBCs derived from
-  the RAP.
-  Note that this test specifies the file format of the FV3GFS external
-  model data (from which to generate ICs) to be "grib2" as opposed to
-  the default value of "nemsio".
+metadata:
+  description: >-
+    This test is to ensure that the workflow running in community mode
+    completes successfully on the RRFS_CONUS_25km grid using the HRRR
+    physics suite with ICs derived from the FV3GFS and LBCs derived from
+    the RAP.
+    Note that this test specifies the file format of the FV3GFS external
+    model data (from which to generate ICs) to be "grib2" as opposed to
+    the default value of "nemsio".
 user:
   RUN_ENVIR: community
 workflow:
