--- a/tests/WE2E/test_configs/grids_extrn_mdls_suites_community/config.grid_RRFS_CONUS_25km_ics_GSMGFS_lbcs_GSMGFS_suite_GFS_2017_gfdlmp.yaml
+++ b/tests/WE2E/test_configs/grids_extrn_mdls_suites_community/config.grid_RRFS_CONUS_25km_ics_GSMGFS_lbcs_GSMGFS_suite_GFS_2017_gfdlmp.yaml
@@ -1,7 +1,8 @@
-description: >-
-  This test is to ensure that the workflow running in community mode
-  completes successfully on the RRFS_CONUS_25km grid using the GFS_2017_gfdlmp
-  physics suite with ICs and LBCs derived from the GSMGFS.
+metadata:
+  description: >-
+    This test is to ensure that the workflow running in community mode
+    completes successfully on the RRFS_CONUS_25km grid using the GFS_2017_gfdlmp
+    physics suite with ICs and LBCs derived from the GSMGFS.
 user:
   RUN_ENVIR: community
 workflow:
