--- a/tests/WE2E/test_configs/grids_extrn_mdls_suites_community/config.grid_RRFS_CONUScompact_13km_ics_HRRR_lbcs_RAP_suite_RRFS_v1alpha.yaml
+++ b/tests/WE2E/test_configs/grids_extrn_mdls_suites_community/config.grid_RRFS_CONUScompact_13km_ics_HRRR_lbcs_RAP_suite_RRFS_v1alpha.yaml
@@ -1,7 +1,8 @@
-description: >-
-  This test is to ensure that the workflow running in community mode
-  completes successfully on the RRFS_CONUScompact_13km grid using the RRFS_v1alpha
-  physics suite with ICs derived from the HRRR and LBCs derived from the RAP.
+metadata:
+  description: >-
+    This test is to ensure that the workflow running in community mode
+    completes successfully on the RRFS_CONUScompact_13km grid using the RRFS_v1alpha
+    physics suite with ICs derived from the HRRR and LBCs derived from the RAP.
 user:
   RUN_ENVIR: community
 workflow:
