--- a/tests/WE2E/test_configs/grids_extrn_mdls_suites_nco/config.nco_grid_RRFS_CONUS_3km_ics_FV3GFS_lbcs_FV3GFS_suite_GFS_v15_thompson_mynn_lam3km.yaml
+++ b/tests/WE2E/test_configs/grids_extrn_mdls_suites_nco/config.nco_grid_RRFS_CONUS_3km_ics_FV3GFS_lbcs_FV3GFS_suite_GFS_v15_thompson_mynn_lam3km.yaml
@@ -1,7 +1,8 @@
-description: >-
-  This test is to ensure that the workflow running in nco mode completes
-  successfully on the RRFS_CONUS_3km grid using the GFS_v15_thompson_mynn_lam3km
-  physics suite with ICs and LBCs derived from the FV3GFS.
+metadata:
+  description: >-
+    This test is to ensure that the workflow running in nco mode completes
+    successfully on the RRFS_CONUS_3km grid using the GFS_v15_thompson_mynn_lam3km
+    physics suite with ICs and LBCs derived from the FV3GFS.
 user:
   RUN_ENVIR: nco
 workflow:
