--- a/tests/WE2E/test_configs/wflow_features/config.MET_verification.yaml
+++ b/tests/WE2E/test_configs/wflow_features/config.MET_verification.yaml
@@ -1,6 +1,7 @@
-description: >-
-  This test is to ensure that the workflow running in community mode
-  completes successfully with MET verification.
+metadata:
+  description: >-
+    This test is to ensure that the workflow running in community mode
+    completes successfully with MET verification.
 user:
   RUN_ENVIR: community
 platform:
