--- a/tests/WE2E/test_configs/wflow_features/config.community_ensemble_008mems.yaml
+++ b/tests/WE2E/test_configs/wflow_features/config.community_ensemble_008mems.yaml
@@ -1,10 +1,11 @@
-description: >-
-  This test checks the capability of the workflow to run ensemble forecasts
-  (i.e. DO_ENSEMBLE set to "TRUE") in community mode (i.e. RUN_ENVIR set
-  to "community") with the number of ensemble members (NUM_ENS_MEMBERS)
-  set to "008".  The leading zeros in "008" should cause the ensemble
-  members to be numbered "mem001", "mem002", ..., "mem008" (instead of,
-  for instance, "mem1", "mem2", ..., "mem8").
+metadata:
+  description: >-
+    This test checks the capability of the workflow to run ensemble forecasts
+    (i.e. DO_ENSEMBLE set to "TRUE") in community mode (i.e. RUN_ENVIR set
+    to "community") with the number of ensemble members (NUM_ENS_MEMBERS)
+    set to "008".  The leading zeros in "008" should cause the ensemble
+    members to be numbered "mem001", "mem002", ..., "mem008" (instead of,
+    for instance, "mem1", "mem2", ..., "mem8").
 user:
   RUN_ENVIR: community
 workflow:
