--- a/tests/WE2E/test_configs/wflow_features/config.community_ensemble_2mems.yaml
+++ b/tests/WE2E/test_configs/wflow_features/config.community_ensemble_2mems.yaml
@@ -1,13 +1,14 @@
-description: >-
-  This test checks the capability of the workflow to run ensemble forecasts
-  (i.e. DO_ENSEMBLE set to "TRUE") in community mode (i.e. RUN_ENVIR set
-  to "community") with the number of ensemble members (NUM_ENS_MEMBERS)
-  set to "2".  The lack of leading zeros in this "2" should cause the
-  ensemble members to be named "mem1" and "mem2" (instead of, for instance,
-  "mem01" and "mem02").
-  Note also that this test uses two cycle hours ("00" and "12") to test
-  the capability of the workflow to run ensemble forecasts for more than
-  one cycle hour in community mode.
+metadata:
+  description: >-
+    This test checks the capability of the workflow to run ensemble forecasts
+    (i.e. DO_ENSEMBLE set to "TRUE") in community mode (i.e. RUN_ENVIR set
+    to "community") with the number of ensemble members (NUM_ENS_MEMBERS)
+    set to "2".  The lack of leading zeros in this "2" should cause the
+    ensemble members to be named "mem1" and "mem2" (instead of, for instance,
+    "mem01" and "mem02").
+    Note also that this test uses two cycle hours ("00" and "12") to test
+    the capability of the workflow to run ensemble forecasts for more than
+    one cycle hour in community mode.
 user:
   RUN_ENVIR: community
 workflow:
