--- a/tests/WE2E/test_configs/wflow_features/config.custom_GFDLgrid__GFDLgrid_USE_GFDLgrid_RES_IN_FILENAMES_eq_TRUE.yaml
+++ b/tests/WE2E/test_configs/wflow_features/config.custom_GFDLgrid__GFDLgrid_USE_GFDLgrid_RES_IN_FILENAMES_eq_TRUE.yaml
@@ -1,11 +1,12 @@
-description: >-
-  This test checks the capability of the workflow to have the user
-  specify a new grid (as opposed to one of the predefined ones in the
-  workflow) of GFDLgrid type.  Note that this test sets the workflow
-  variable
-    GFDLgrid_USE_GFDLgrid_RES_IN_FILENAMES
-  to "TRUE" (which is its default value); see the UFS SRW User's Guide
-  for a description of this variable.
+metadata:
+  description: >-
+    This test checks the capability of the workflow to have the user
+    specify a new grid (as opposed to one of the predefined ones in the
+    workflow) of GFDLgrid type.  Note that this test sets the workflow
+    variable
+      GFDLgrid_USE_GFDLgrid_RES_IN_FILENAMES
+    to "TRUE" (which is its default value); see the UFS SRW User's Guide
+    for a description of this variable.
 user:
   RUN_ENVIR: community
 workflow:
