--- a/tests/WE2E/test_configs/wflow_features/config.deactivate_tasks.yaml
+++ b/tests/WE2E/test_configs/wflow_features/config.deactivate_tasks.yaml
@@ -1,20 +1,21 @@
-description: >-
-  This test has two purposes:
-  1) It checks that the various workflow tasks can be deactivated, i.e.
-     removed from the Rocoto XML.
-  2) It checks the capability of the workflow to use "template" experiment
-     variables, i.e. variables whose definitions include references to
-     other variables, e.g.
-       MY_VAR='\${ANOTHER_VAR}'
-  Note that we do not deactivate all tasks in the workflow; we leave the
-  MAKE_GRID_TN, MAKE_OROG_TN, and MAKE_SFC_CLIMO_TN activated because:
-  1) There is already a WE2E test that runs with these three tasks
-     deactivated (that test is to ensure that pre-generated grid,
-     orography, and surface climatology files can be used).
-  2) In checking the template variable capability, we want to make sure
-     that the variable defintions file (GLOBAL_VAR_DEFNS_FN) generated
-     does not have syntax or other errors in it by sourcing it in these
-     three tasks.
+metadata:
+  description: >-
+    This test has two purposes:
+    1) It checks that the various workflow tasks can be deactivated, i.e.
+       removed from the Rocoto XML.
+    2) It checks the capability of the workflow to use "template" experiment
+       variables, i.e. variables whose definitions include references to
+       other variables, e.g.
+         MY_VAR='\${ANOTHER_VAR}'
+    Note that we do not deactivate all tasks in the workflow; we leave the
+    MAKE_GRID_TN, MAKE_OROG_TN, and MAKE_SFC_CLIMO_TN activated because:
+    1) There is already a WE2E test that runs with these three tasks
+       deactivated (that test is to ensure that pre-generated grid,
+       orography, and surface climatology files can be used).
+    2) In checking the template variable capability, we want to make sure
+       that the variable defintions file (GLOBAL_VAR_DEFNS_FN) generated
+       does not have syntax or other errors in it by sourcing it in these
+       three tasks.
 user:
   RUN_ENVIR: community
 platform:
