--- a/tests/WE2E/test_configs/wflow_features/config.pregen_grid_orog_sfc_climo.yaml
+++ b/tests/WE2E/test_configs/wflow_features/config.pregen_grid_orog_sfc_climo.yaml
@@ -1,6 +1,7 @@
-description: >-
-  This test checks the capability of the workflow to use pregenerated
-  grid, orography, and surface climatology files.
+metadata:
+  description: >-
+    This test checks the capability of the workflow to use pregenerated
+    grid, orography, and surface climatology files.
 user:
   RUN_ENVIR: community
 workflow:
