--- a/tests/WE2E/test_configs/wflow_features/config.specify_EXTRN_MDL_SYSBASEDIR_ICS_LBCS.yaml
+++ b/tests/WE2E/test_configs/wflow_features/config.specify_EXTRN_MDL_SYSBASEDIR_ICS_LBCS.yaml
@@ -1,7 +1,8 @@
-description: >-
-  This test checks the capability of the workflow to have the base
-  directories on the system disk in which the external model files are
-  located be set to user-specified values.
+metadata:
+  description: >-
+    This test checks the capability of the workflow to have the base
+    directories on the system disk in which the external model files are
+    located be set to user-specified values.
 user:
   RUN_ENVIR: community
 workflow:
