--- a/tests/WE2E/test_configs/wflow_features/config.specify_RESTART_INTERVAL.yaml
+++ b/tests/WE2E/test_configs/wflow_features/config.specify_RESTART_INTERVAL.yaml
@@ -1,7 +1,8 @@
-description: >-
-  This test checks the capability of the workflow to have the time
-  interval (RESTART_INTERVAL) at which restart files are written by the
-  forecast model be set to a user-specified value.
+metadata:
+  description: >-
+    This test checks the capability of the workflow to have the time
+    interval (RESTART_INTERVAL) at which restart files are written by the
+    forecast model be set to a user-specified value.
 user:
   RUN_ENVIR: community
 workflow:
