--- a/tests/WE2E/test_configs/wflow_features/config.subhourly_post_ensemble_2mems.yaml
+++ b/tests/WE2E/test_configs/wflow_features/config.subhourly_post_ensemble_2mems.yaml
@@ -1,11 +1,12 @@
-description: >-
-  This test checks the capability of the workflow to run ensemble forecasts
-  that require the forecast model to write output files and perform post-
-  processing on a sub-hourly time interval.
-  This test is needed in addition to the one named "subhourly_post"
-  because in the jinja template file from which the rocoto workflow XML
-  is generated, the code changes that were made to add the subhourly
-  capability also involved changes to the ensemble capability.
+metadata:
+  description: >-
+    This test checks the capability of the workflow to run ensemble forecasts
+    that require the forecast model to write output files and perform post-
+    processing on a sub-hourly time interval.
+    This test is needed in addition to the one named "subhourly_post"
+    because in the jinja template file from which the rocoto workflow XML
+    is generated, the code changes that were made to add the subhourly
+    capability also involved changes to the ensemble capability.
 user:
   RUN_ENVIR: community
 workflow:
