--- a/tests/WE2E/test_configs/grids_extrn_mdls_suites_community/config.grid_RRFS_CONUS_3km_ics_FV3GFS_lbcs_FV3GFS_suite_GFS_v15_thompson_mynn_lam3km.yaml
+++ b/tests/WE2E/test_configs/grids_extrn_mdls_suites_community/config.grid_RRFS_CONUS_3km_ics_FV3GFS_lbcs_FV3GFS_suite_GFS_v15_thompson_mynn_lam3km.yaml
@@ -6,6 +6,7 @@ metadata:
 user:
   RUN_ENVIR: community
 workflow:
+  CCPP_PHYS_SUITE: FV3_GFS_v15_thompson_mynn_lam3km
   DATE_FIRST_CYCL: '20190701'
   DATE_LAST_CYCL: '20190701'
   CYCL_HRS:
@@ -15,12 +16,10 @@ workflow:
 task_run_fcst:
   PREDEF_GRID_NAME: RRFS_CONUS_3km
   USE_MERRA_CLIMO: 'TRUE'
-task_run_get_extrn_ics:
+task_get_extrn_ics:
   EXTRN_MDL_NAME_ICS: FV3GFS
   USE_USER_STAGED_EXTRN_FILES: 'TRUE'
-task_run_get_extrn_lbcs:
+task_get_extrn_lbcs:
   EXTRN_MDL_NAME_LBCS: FV3GFS
   LBC_SPEC_INTVL_HRS: '3'
   USE_USER_STAGED_EXTRN_FILES: 'TRUE'
-task_run_make_ics:
-  CCPP_PHYS_SUITE: FV3_GFS_v15_thompson_mynn_lam3km
