--- a/tests/WE2E/test_configs/grids_extrn_mdls_suites_community/config.grid_RRFS_CONUScompact_25km_ics_HRRR_lbcs_HRRR_suite_RRFS_v1beta.yaml
+++ b/tests/WE2E/test_configs/grids_extrn_mdls_suites_community/config.grid_RRFS_CONUScompact_25km_ics_HRRR_lbcs_HRRR_suite_RRFS_v1beta.yaml
@@ -6,6 +6,7 @@ metadata:
 user:
   RUN_ENVIR: community
 workflow:
+  CCPP_PHYS_SUITE: FV3_RRFS_v1beta
   DATE_FIRST_CYCL: '20200810'
   DATE_LAST_CYCL: '20200810'
   CYCL_HRS:
@@ -14,16 +15,14 @@ workflow:
   PREEXISTING_DIR_METHOD: rename
 task_run_fcst:
   PREDEF_GRID_NAME: RRFS_CONUScompact_25km
-task_run_get_extrn_ics:
+task_get_extrn_ics:
   EXTRN_MDL_NAME_ICS: HRRR
   USE_USER_STAGED_EXTRN_FILES: 'TRUE'
   EXTRN_MDL_FILES_ICS:
   - '{yy}{jjj}{hh}00{fcst_hr:02d}00'
-task_run_get_extrn_lbcs:
+task_get_extrn_lbcs:
   EXTRN_MDL_NAME_LBCS: HRRR
   LBC_SPEC_INTVL_HRS: '3'
   USE_USER_STAGED_EXTRN_FILES: 'TRUE'
   EXTRN_MDL_FILES_LBCS:
   - '{yy}{jjj}{hh}00{fcst_hr:02d}00'
-task_run_make_ics:
-  CCPP_PHYS_SUITE: FV3_RRFS_v1beta
