--- a/tests/WE2E/test_configs/grids_extrn_mdls_suites_community/config.grid_RRFS_NA_13km_ics_FV3GFS_lbcs_FV3GFS_suite_RRFS_v1beta.yaml
+++ b/tests/WE2E/test_configs/grids_extrn_mdls_suites_community/config.grid_RRFS_NA_13km_ics_FV3GFS_lbcs_FV3GFS_suite_RRFS_v1beta.yaml
@@ -9,6 +9,7 @@ metadata:
 user:
   RUN_ENVIR: community
 workflow:
+  CCPP_PHYS_SUITE: FV3_RRFS_v1beta
   DATE_FIRST_CYCL: '20190701'
   DATE_LAST_CYCL: '20190701'
   CYCL_HRS:
@@ -18,19 +19,18 @@ workflow:
 task_run_fcst:
   OMP_STACKSIZE_RUN_FCST: 2048m
   PREDEF_GRID_NAME: RRFS_NA_13km
-task_run_get_extrn_ics:
+task_get_extrn_ics:
   EXTRN_MDL_NAME_ICS: FV3GFS
   USE_USER_STAGED_EXTRN_FILES: 'TRUE'
-task_run_get_extrn_lbcs:
+task_get_extrn_lbcs:
   EXTRN_MDL_NAME_LBCS: FV3GFS
   LBC_SPEC_INTVL_HRS: '6'
   USE_USER_STAGED_EXTRN_FILES: 'TRUE'
-task_run_make_ics:
+task_make_ics:
   NNODES_MAKE_ICS: '12'
   PPN_MAKE_ICS: '4'
   OMP_STACKSIZE_MAKE_ICS: 2048m
-  CCPP_PHYS_SUITE: FV3_RRFS_v1beta
-task_run_make_lbcs:
+task_make_lbcs:
   NNODES_MAKE_LBCS: '12'
   PPN_MAKE_LBCS: '4'
   WTIME_MAKE_LBCS: 01:00:00
