--- a/tests/WE2E/test_configs/release_SRW_v1/config.GST_release_public_v1.yaml
+++ b/tests/WE2E/test_configs/release_SRW_v1/config.GST_release_public_v1.yaml
@@ -5,6 +5,7 @@ metadata:
 user:
   RUN_ENVIR: community
 workflow:
+  CCPP_PHYS_SUITE: FV3_GFS_v15p2
   DATE_FIRST_CYCL: '20190615'
   DATE_LAST_CYCL: '20190615'
   CYCL_HRS:
@@ -14,14 +15,12 @@ workflow:
 task_run_fcst:
   WTIME_RUN_FCST: 01:00:00
   PREDEF_GRID_NAME: RRFS_CONUS_25km
-task_run_get_extrn_ics:
+task_get_extrn_ics:
   EXTRN_MDL_NAME_ICS: FV3GFS
   FV3GFS_FILE_FMT_ICS: grib2
   USE_USER_STAGED_EXTRN_FILES: 'TRUE'
-task_run_get_extrn_lbcs:
+task_get_extrn_lbcs:
   EXTRN_MDL_NAME_LBCS: FV3GFS
   LBC_SPEC_INTVL_HRS: '6'
   FV3GFS_FILE_FMT_LBCS: grib2
   USE_USER_STAGED_EXTRN_FILES: 'TRUE'
-task_run_make_ics:
-  CCPP_PHYS_SUITE: FV3_GFS_v15p2
