--- a/tests/WE2E/test_configs/wflow_features/config.MET_ensemble_verification.yaml
+++ b/tests/WE2E/test_configs/wflow_features/config.MET_ensemble_verification.yaml
@@ -7,6 +7,7 @@ user:
 platform:
   MODEL: FV3_GFS_v15p2_CONUS_25km
 workflow:
+  CCPP_PHYS_SUITE: FV3_GFS_v15p2
   DATE_FIRST_CYCL: '20190615'
   DATE_LAST_CYCL: '20190615'
   CYCL_HRS:
@@ -21,17 +22,15 @@ workflow_switches:
 task_run_fcst:
   WTIME_RUN_FCST: 01:00:00
   PREDEF_GRID_NAME: RRFS_CONUS_25km
-task_run_get_extrn_ics:
+task_get_extrn_ics:
   EXTRN_MDL_NAME_ICS: FV3GFS
   FV3GFS_FILE_FMT_ICS: grib2
   USE_USER_STAGED_EXTRN_FILES: 'TRUE'
-task_run_get_extrn_lbcs:
+task_get_extrn_lbcs:
   EXTRN_MDL_NAME_LBCS: FV3GFS
   LBC_SPEC_INTVL_HRS: '6'
   FV3GFS_FILE_FMT_LBCS: grib2
   USE_USER_STAGED_EXTRN_FILES: 'TRUE'
-task_run_make_ics:
-  CCPP_PHYS_SUITE: FV3_GFS_v15p2
 global:
   DO_ENSEMBLE: 'TRUE'
   NUM_ENS_MEMBERS: '2'
