--- a/tests/WE2E/test_configs/wflow_features/config.custom_GFDLgrid__GFDLgrid_USE_GFDLgrid_RES_IN_FILENAMES_eq_FALSE.yaml
+++ b/tests/WE2E/test_configs/wflow_features/config.custom_GFDLgrid__GFDLgrid_USE_GFDLgrid_RES_IN_FILENAMES_eq_FALSE.yaml
@@ -10,6 +10,8 @@ metadata:
 user:
   RUN_ENVIR: community
 workflow:
+  CCPP_PHYS_SUITE: FV3_GFS_2017_gfdlmp
+  GRID_GEN_METHOD: GFDLgrid
   DATE_FIRST_CYCL: '20190701'
   DATE_LAST_CYCL: '20190701'
   CYCL_HRS:
@@ -33,15 +35,14 @@ task_run_fcst:
   WRTCMP_lat_upr_rght: '15.0'
   WRTCMP_dlon: '0.24'
   WRTCMP_dlat: '0.24'
-task_run_get_extrn_ics:
+task_get_extrn_ics:
   EXTRN_MDL_NAME_ICS: FV3GFS
   USE_USER_STAGED_EXTRN_FILES: 'TRUE'
-task_run_get_extrn_lbcs:
+task_get_extrn_lbcs:
   EXTRN_MDL_NAME_LBCS: FV3GFS
   LBC_SPEC_INTVL_HRS: '3'
   USE_USER_STAGED_EXTRN_FILES: 'TRUE'
-task_run_make_grid:
-  GRID_GEN_METHOD: GFDLgrid
+task_make_grid:
   GFDLgrid_LON_T6_CTR: '-97.5'
   GFDLgrid_LAT_T6_CTR: '38.5'
   GFDLgrid_RES: '96'
@@ -52,7 +53,5 @@ task_run_make_grid:
   GFDLgrid_JSTART_OF_RGNL_DOM_ON_T6G: '10'
   GFDLgrid_JEND_OF_RGNL_DOM_ON_T6G: '87'
   GFDLgrid_USE_GFDLgrid_RES_IN_FILENAMES: 'FALSE'
-task_run_make_ics:
-  CCPP_PHYS_SUITE: FV3_GFS_2017_gfdlmp
 task_run_post:
   POST_OUTPUT_DOMAIN_NAME: custom_GFDLgrid
