--- a/tests/WE2E/test_configs/wflow_features/config.deactivate_tasks.yaml
+++ b/tests/WE2E/test_configs/wflow_features/config.deactivate_tasks.yaml
@@ -23,6 +23,7 @@ platform:
   RUN_CMD_FCST: mpirun -np ${PE_MEMBER01}
   RUN_CMD_POST: echo hello $yyyymmdd
 workflow:
+  CCPP_PHYS_SUITE: FV3_GFS_v15p2
   DATE_FIRST_CYCL: '20190701'
   DATE_LAST_CYCL: '20190701'
   CYCL_HRS:
@@ -38,12 +39,10 @@ workflow_switches:
   RUN_TASK_RUN_POST: 'FALSE'
 task_run_fcst:
   PREDEF_GRID_NAME: RRFS_CONUS_25km
-task_run_get_extrn_ics:
+task_get_extrn_ics:
   EXTRN_MDL_NAME_ICS: FV3GFS
   USE_USER_STAGED_EXTRN_FILES: 'TRUE'
-task_run_get_extrn_lbcs:
+task_get_extrn_lbcs:
   EXTRN_MDL_NAME_LBCS: FV3GFS
   LBC_SPEC_INTVL_HRS: '3'
   USE_USER_STAGED_EXTRN_FILES: 'TRUE'
-task_run_make_ics:
-  CCPP_PHYS_SUITE: FV3_GFS_v15p2
