--- a/tests/WE2E/test_configs/wflow_features/config.get_from_HPSS_ics_FV3GFS_lbcs_FV3GFS_fmt_grib2_2019061200.yaml
+++ b/tests/WE2E/test_configs/wflow_features/config.get_from_HPSS_ics_FV3GFS_lbcs_FV3GFS_fmt_grib2_2019061200.yaml
@@ -7,6 +7,7 @@ metadata:
 user:
   RUN_ENVIR: community
 workflow:
+  CCPP_PHYS_SUITE: FV3_GFS_v15p2
   DATE_FIRST_CYCL: '20190612'
   DATE_LAST_CYCL: '20190612'
   CYCL_HRS:
@@ -15,12 +16,10 @@ workflow:
   PREEXISTING_DIR_METHOD: rename
 task_run_fcst:
   PREDEF_GRID_NAME: RRFS_CONUS_25km
-task_run_get_extrn_ics:
+task_get_extrn_ics:
   EXTRN_MDL_NAME_ICS: FV3GFS
   FV3GFS_FILE_FMT_ICS: grib2
-task_run_get_extrn_lbcs:
+task_get_extrn_lbcs:
   EXTRN_MDL_NAME_LBCS: FV3GFS
   LBC_SPEC_INTVL_HRS: '3'
   FV3GFS_FILE_FMT_LBCS: grib2
-task_run_make_ics:
-  CCPP_PHYS_SUITE: FV3_GFS_v15p2
