--- a/tests/WE2E/test_configs/wflow_features/config.get_from_HPSS_ics_HRRR_lbcs_RAP.yaml
+++ b/tests/WE2E/test_configs/wflow_features/config.get_from_HPSS_ics_HRRR_lbcs_RAP.yaml
@@ -8,6 +8,7 @@ metadata:
 user:
   RUN_ENVIR: community
 workflow:
+  CCPP_PHYS_SUITE: FV3_HRRR
   DATE_FIRST_CYCL: '20200801'
   DATE_LAST_CYCL: '20200801'
   CYCL_HRS:
@@ -16,14 +17,12 @@ workflow:
   PREEXISTING_DIR_METHOD: rename
 task_run_fcst:
   PREDEF_GRID_NAME: RRFS_CONUScompact_25km
-task_run_get_extrn_ics:
+task_get_extrn_ics:
   EXTRN_MDL_NAME_ICS: HRRR
   EXTRN_MDL_FILES_ICS:
   - '{yy}{jjj}{hh}00{fcst_hr:02d}00'
-task_run_get_extrn_lbcs:
+task_get_extrn_lbcs:
   EXTRN_MDL_NAME_LBCS: RAP
   LBC_SPEC_INTVL_HRS: '3'
   EXTRN_MDL_FILES_LBCS:
   - '{yy}{jjj}{hh}00{fcst_hr:02d}00'
-task_run_make_ics:
-  CCPP_PHYS_SUITE: FV3_HRRR
