--- a/tests/WE2E/test_configs/wflow_features/config.specify_template_filenames.yaml
+++ b/tests/WE2E/test_configs/wflow_features/config.specify_template_filenames.yaml
@@ -10,6 +10,7 @@ workflow:
   FIELD_TABLE_TMPL_FN: field_table
   MODEL_CONFIG_TMPL_FN: model_configure
   NEMS_CONFIG_TMPL_FN: nems.configure
+  CCPP_PHYS_SUITE: FV3_GFS_v15p2
   DATE_FIRST_CYCL: '20190701'
   DATE_LAST_CYCL: '20190701'
   CYCL_HRS:
@@ -18,12 +19,10 @@ workflow:
   PREEXISTING_DIR_METHOD: rename
 task_run_fcst:
   PREDEF_GRID_NAME: RRFS_CONUS_25km
-task_run_get_extrn_ics:
+task_get_extrn_ics:
   EXTRN_MDL_NAME_ICS: FV3GFS
   USE_USER_STAGED_EXTRN_FILES: 'TRUE'
-task_run_get_extrn_lbcs:
+task_get_extrn_lbcs:
   EXTRN_MDL_NAME_LBCS: FV3GFS
   LBC_SPEC_INTVL_HRS: '3'
   USE_USER_STAGED_EXTRN_FILES: 'TRUE'
-task_run_make_ics:
-  CCPP_PHYS_SUITE: FV3_GFS_v15p2
