--- a/tests/WE2E/test_configs/wflow_features/config.subhourly_post.yaml
+++ b/tests/WE2E/test_configs/wflow_features/config.subhourly_post.yaml
@@ -5,6 +5,7 @@ metadata:
 user:
   RUN_ENVIR: community
 workflow:
+  CCPP_PHYS_SUITE: FV3_RRFS_v1beta
   DATE_FIRST_CYCL: '20200810'
   DATE_LAST_CYCL: '20200810'
   CYCL_HRS:
@@ -14,19 +15,17 @@ workflow:
 task_run_fcst:
   DT_ATMOS: '120'
   PREDEF_GRID_NAME: RRFS_CONUScompact_25km
-task_run_get_extrn_ics:
+task_get_extrn_ics:
   EXTRN_MDL_NAME_ICS: HRRR
   USE_USER_STAGED_EXTRN_FILES: 'TRUE'
   EXTRN_MDL_FILES_ICS:
   - '{yy}{jjj}{hh}00{fcst_hr:02d}00'
-task_run_get_extrn_lbcs:
+task_get_extrn_lbcs:
   EXTRN_MDL_NAME_LBCS: RAP
   LBC_SPEC_INTVL_HRS: '1'
   USE_USER_STAGED_EXTRN_FILES: 'TRUE'
   EXTRN_MDL_FILES_LBCS:
   - '{yy}{jjj}{hh}00{fcst_hr:02d}00'
-task_run_make_ics:
-  CCPP_PHYS_SUITE: FV3_RRFS_v1beta
 task_run_post:
   SUB_HOURLY_POST: 'TRUE'
   DT_SUBHOURLY_POST_MNTS: '2'
