--- a/ush/config_defaults.yaml
+++ b/ush/config_defaults.yaml
@@ -560,6 +560,60 @@ workflow:
   #
   #-----------------------------------------------------------------------
   #
+  # Set CCPP-associated parameters.  Definitions:
+  #
+  # CCPP_PHYS_SUITE:
+  # The physics suite that will run using CCPP (Common Community Physics
+  # Package).  The choice of physics suite determines the forecast model's 
+  # namelist file, the diagnostics table file, the field table file, and 
+  # the XML physics suite definition file that are staged in the experiment 
+  # directory or the cycle directories under it.
+  #
+  #-----------------------------------------------------------------------
+  #
+  CCPP_PHYS_SUITE: "FV3_GFS_v16"
+  #
+  #-----------------------------------------------------------------------
+  #
+  # Set GRID_GEN_METHOD.  This variable specifies the method to use to 
+  # generate a regional grid in the horizontal.  The values that it can 
+  # take on are:
+  #
+  # * "GFDLgrid":
+  #   This setting will generate a regional grid by first generating a 
+  #   "parent" global cubed-sphere grid and then taking a portion of tile
+  #   6 of that global grid -- referred to in the grid generation scripts
+  #   as "tile 7" even though it doesn't correspond to a complete tile --
+  #   and using it as the regional grid.  Note that the forecast is run on
+  #   only on the regional grid (i.e. tile 7, not tiles 1 through 6).
+  #
+  # * "ESGgrid":
+  #   This will generate a regional grid using the map projection developed
+  #   by Jim Purser of EMC.
+  #
+  # Note that:
+  #
+  # 1) If the experiment is using one of the predefined grids (i.e. if 
+  #    PREDEF_GRID_NAME is set to the name of one of the valid predefined 
+  #    grids), then GRID_GEN_METHOD will be reset to the value of 
+  #    GRID_GEN_METHOD for that grid.  This will happen regardless of 
+  #    whether or not GRID_GEN_METHOD is assigned a value in the user-
+  #    specified experiment configuration file, i.e. any value it may be
+  #    assigned in the experiment configuration file will be overwritten.
+  #
+  # 2) If the experiment is not using one of the predefined grids (i.e. if 
+  #    PREDEF_GRID_NAME is set to a null string), then GRID_GEN_METHOD must 
+  #    be set in the experiment configuration file.  Otherwise, it will 
+  #    remain set to a null string, and the experiment generation will 
+  #    fail because the generation scripts check to ensure that it is set 
+  #    to a non-empty string before creating the experiment directory.
+  #
+  #-----------------------------------------------------------------------
+  #
+  GRID_GEN_METHOD: ""
+  #
+  #-----------------------------------------------------------------------
+  #
   # Set forecast parameters.  Definitions:
   #
   # DATE_FIRST_CYCL:
@@ -1147,7 +1201,7 @@ task_run_fcst:
 #----------------------------
 # EXTRN ICS config parameters
 #-----------------------------
-task_run_get_extrn_ics:
+task_get_extrn_ics:
   GET_EXTRN_ICS_TN: "get_extrn_ics"
   NNODES_GET_EXTRN_ICS: "1"
   PPN_GET_EXTRN_ICS: "1"
@@ -1263,7 +1317,7 @@ task_run_get_extrn_ics:
 #----------------------------
 # EXTRN LBCS config parameters
 #-----------------------------
-task_run_get_extrn_lbcs:
+task_get_extrn_lbcs:
   GET_EXTRN_LBCS_TN: "get_extrn_lbcs"
   NNODES_GET_EXTRN_LBCS: "1"
   PPN_GET_EXTRN_LBCS: "1"
@@ -1356,7 +1410,7 @@ task_run_get_extrn_lbcs:
 #----------------------------
 # MAKE GRID config parameters
 #-----------------------------
-task_run_make_grid:
+task_make_grid:
   MAKE_GRID_TN: "make_grid"
   NNODES_MAKE_GRID: "1"
   PPN_MAKE_GRID: "24"
@@ -1372,45 +1426,6 @@ task_run_make_grid:
   #-----------------------------------------------------------------------
   # 
   GRID_DIR: "/path/to/pregenerated/grid/files"
-  #
-  #-----------------------------------------------------------------------
-  #
-  # Set GRID_GEN_METHOD.  This variable specifies the method to use to 
-  # generate a regional grid in the horizontal.  The values that it can 
-  # take on are:
-  #
-  # * "GFDLgrid":
-  #   This setting will generate a regional grid by first generating a 
-  #   "parent" global cubed-sphere grid and then taking a portion of tile
-  #   6 of that global grid -- referred to in the grid generation scripts
-  #   as "tile 7" even though it doesn't correspond to a complete tile --
-  #   and using it as the regional grid.  Note that the forecast is run on
-  #   only on the regional grid (i.e. tile 7, not tiles 1 through 6).
-  #
-  # * "ESGgrid":
-  #   This will generate a regional grid using the map projection developed
-  #   by Jim Purser of EMC.
-  #
-  # Note that:
-  #
-  # 1) If the experiment is using one of the predefined grids (i.e. if 
-  #    PREDEF_GRID_NAME is set to the name of one of the valid predefined 
-  #    grids), then GRID_GEN_METHOD will be reset to the value of 
-  #    GRID_GEN_METHOD for that grid.  This will happen regardless of 
-  #    whether or not GRID_GEN_METHOD is assigned a value in the user-
-  #    specified experiment configuration file, i.e. any value it may be
-  #    assigned in the experiment configuration file will be overwritten.
-  #
-  # 2) If the experiment is not using one of the predefined grids (i.e. if 
-  #    PREDEF_GRID_NAME is set to a null string), then GRID_GEN_METHOD must 
-  #    be set in the experiment configuration file.  Otherwise, it will 
-  #    remain set to a null string, and the experiment generation will 
-  #    fail because the generation scripts check to ensure that it is set 
-  #    to a non-empty string before creating the experiment directory.
-  #
-  #-----------------------------------------------------------------------
-  #
-  GRID_GEN_METHOD: ""
   #
   #-----------------------------------------------------------------------
   #
@@ -1682,7 +1697,7 @@ task_run_make_grid:
 #----------------------------
 # MAKE OROG config parameters
 #-----------------------------
-task_run_make_orog:
+task_make_orog:
   MAKE_OROG_TN: "make_orog"
   NNODES_MAKE_OROG: "1"
   PPN_MAKE_OROG: "24"
@@ -1696,7 +1711,7 @@ task_run_make_orog:
 #----------------------------
 # MAKE SFC CLIMO config parameters
 #-----------------------------
-task_run_make_sfc_climo:
+task_make_sfc_climo:
   MAKE_SFC_CLIMO_TN: "make_sfc_climo"
   NNODES_MAKE_SFC_CLIMO: "2"
   PPN_MAKE_SFC_CLIMO: "24"
@@ -1710,7 +1725,7 @@ task_run_make_sfc_climo:
 #----------------------------
 # MAKE ICS config parameters
 #-----------------------------
-task_run_make_ics:
+task_make_ics:
   MAKE_ICS_TN: "make_ics"
   NNODES_MAKE_ICS: "4"
   PPN_MAKE_ICS: "12"
@@ -1719,21 +1734,6 @@ task_run_make_ics:
   KMP_AFFINITY_MAKE_ICS: "scatter"
   OMP_NUM_THREADS_MAKE_ICS: "1"
   OMP_STACKSIZE_MAKE_ICS: "1024m"
-  #
-  #-----------------------------------------------------------------------
-  #
-  # Set CCPP-associated parameters.  Definitions:
-  #
-  # CCPP_PHYS_SUITE:
-  # The physics suite that will run using CCPP (Common Community Physics
-  # Package).  The choice of physics suite determines the forecast model's 
-  # namelist file, the diagnostics table file, the field table file, and 
-  # the XML physics suite definition file that are staged in the experiment 
-  # directory or the cycle directories under it.
-  #
-  #-----------------------------------------------------------------------
-  #
-  CCPP_PHYS_SUITE: "FV3_GFS_v16"
   #
   #-----------------------------------------------------------------------
   #
@@ -1770,7 +1770,7 @@ task_run_make_ics:
 #----------------------------
 # MAKE LBCS config parameters
 #-----------------------------
-task_run_make_lbcs:
+task_make_lbcs:
   MAKE_LBCS_TN: "make_lbcs"
   NNODES_MAKE_LBCS: "4"
   PPN_MAKE_LBCS: "12"
@@ -1888,7 +1888,7 @@ task_get_obs_ndas:
 #----------------------------
 # VX_GRIDSTAT config parameters
 #-----------------------------
-task_vx_gridstat:
+task_run_vx_gridstat:
   VX_GRIDSTAT_TN: "run_gridstatvx"
   NNODES_VX_GRIDSTAT: "1"
   PPN_VX_GRIDSTAT: "1"
@@ -1898,7 +1898,7 @@ task_vx_gridstat:
 #----------------------------
 # VX_GRIDSTAT_REFC config parameters
 #-----------------------------
-task_vx_gridstat_refc:
+task_run_vx_gridstat_refc:
   VX_GRIDSTAT_REFC_TN: "run_gridstatvx_refc"
   NNODES_VX_GRIDSTAT: "1"
   PPN_VX_GRIDSTAT: "1"
@@ -1908,7 +1908,7 @@ task_vx_gridstat_refc:
 #----------------------------
 # VX_GRIDSTAT_RETOP config parameters
 #-----------------------------
-task_vx_gridstat_retop:
+task_run_vx_gridstat_retop:
   VX_GRIDSTAT_RETOP_TN: "run_gridstatvx_retop"
   NNODES_VX_GRIDSTAT: "1"
   PPN_VX_GRIDSTAT: "1"
@@ -1918,7 +1918,7 @@ task_vx_gridstat_retop:
 #----------------------------
 # VX_GRIDSTAT_03h config parameters
 #-----------------------------
-task_vx_gridstat_03h:
+task_run_vx_gridstat_03h:
   VX_GRIDSTAT_03h_TN: "run_gridstatvx_03h"
   NNODES_VX_GRIDSTAT: "1"
   PPN_VX_GRIDSTAT: "1"
@@ -1928,7 +1928,7 @@ task_vx_gridstat_03h:
 #----------------------------
 # VX_GRIDSTAT_06h config parameters
 #-----------------------------
-task_vx_gridstat_06h:
+task_run_vx_gridstat_06h:
   VX_GRIDSTAT_06h_TN: "run_gridstatvx_06h"
   NNODES_VX_GRIDSTAT: "1"
   PPN_VX_GRIDSTAT: "1"
@@ -1938,7 +1938,7 @@ task_vx_gridstat_06h:
 #----------------------------
 # VX_GRIDSTAT_24h config parameters
 #-----------------------------
-task_vx_gridstat_24h:
+task_run_vx_gridstat_24h:
   VX_GRIDSTAT_24h_TN: "run_gridstatvx_24h"
   NNODES_VX_GRIDSTAT: "1"
   PPN_VX_GRIDSTAT: "1"
@@ -1948,7 +1948,7 @@ task_vx_gridstat_24h:
 #----------------------------
 # VX_POINTSTAT config parameters
 #-----------------------------
-task_vx_pointstat:
+task_run_vx_pointstat:
   VX_POINTSTAT_TN: "run_pointstatvx"
   NNODES_VX_POINTSTAT: "1"
   PPN_VX_POINTSTAT: "1"
@@ -1958,7 +1958,7 @@ task_vx_pointstat:
 #----------------------------
 # VX_ENSGRID config parameters
 #-----------------------------
-task_vx_ensgrid:
+task_run_vx_ensgrid:
   VX_ENSGRID_03h_TN: "run_ensgridvx_03h"
   MAXTRIES_VX_ENSGRID_03h: "1"
   VX_ENSGRID_06h_TN: "run_ensgridvx_06h"
@@ -1978,7 +1978,7 @@ task_vx_ensgrid:
 #----------------------------
 # VX_ENSGRID_REFC config parameters
 #-----------------------------
-task_vx_ensgrid_refc:
+task_run_vx_ensgrid_refc:
   VX_ENSGRID_REFC_TN: "run_ensgridvx_refc"
   NNODES_VX_ENSGRID: "1"
   PPN_VX_ENSGRID: "1"
@@ -1988,7 +1988,7 @@ task_vx_ensgrid_refc:
 #----------------------------
 # VX_ENSGRID_MEAN config parameters
 #-----------------------------
-task_vx_ensgrid_mean:
+task_run_vx_ensgrid_mean:
   VX_ENSGRID_MEAN_TN: "run_ensgridvx_mean"
   NNODES_VX_ENSGRID_MEAN: "1"
   PPN_VX_ENSGRID_MEAN: "1"
@@ -1998,7 +1998,7 @@ task_vx_ensgrid_mean:
 #----------------------------
 # VX_ENSGRID_MEAN_03h config parameters
 #-----------------------------
-task_vx_ensgrid_mean_03h:
+task_run_vx_ensgrid_mean_03h:
   VX_ENSGRID_MEAN_03h_TN: "run_ensgridvx_mean_03h"
   NNODES_VX_ENSGRID_MEAN: "1"
   PPN_VX_ENSGRID_MEAN: "1"
@@ -2008,7 +2008,7 @@ task_vx_ensgrid_mean_03h:
 #----------------------------
 # VX_ENSGRID_MEAN_06h config parameters
 #-----------------------------
-task_vx_ensgrid_mean_06h:
+task_run_vx_ensgrid_mean_06h:
   VX_ENSGRID_MEAN_06h_TN: "run_ensgridvx_mean_06h"
   NNODES_VX_ENSGRID_MEAN: "1"
   PPN_VX_ENSGRID_MEAN: "1"
@@ -2018,7 +2018,7 @@ task_vx_ensgrid_mean_06h:
 #----------------------------
 # VX_ENSGRID_MEAN_24h config parameters
 #-----------------------------
-task_vx_ensgrid_mean_24h:
+task_run_vx_ensgrid_mean_24h:
   VX_ENSGRID_MEAN_24h_TN: "run_ensgridvx_mean_24h"
   NNODES_VX_ENSGRID_MEAN: "1"
   PPN_VX_ENSGRID_MEAN: "1"
@@ -2028,7 +2028,7 @@ task_vx_ensgrid_mean_24h:
 #----------------------------
 # VX_ENSGRID_PROB config parameters
 #-----------------------------
-task_vx_ensgrid_prob:
+task_run_vx_ensgrid_prob:
   VX_ENSGRID_PROB_TN: "run_ensgridvx_prob"
   NNODES_VX_ENSGRID_PROB: "1"
   PPN_VX_ENSGRID_PROB: "1"
@@ -2038,7 +2038,7 @@ task_vx_ensgrid_prob:
 #----------------------------
 # VX_ENSGRID_PROB_03h config parameters
 #-----------------------------
-task_vx_ensgrid_prob_03h:
+task_run_vx_ensgrid_prob_03h:
   VX_ENSGRID_PROB_03h_TN: "run_ensgridvx_prob_03h"
   NNODES_VX_ENSGRID_PROB: "1"
   PPN_VX_ENSGRID_PROB: "1"
@@ -2048,7 +2048,7 @@ task_vx_ensgrid_prob_03h:
 #----------------------------
 # VX_ENSGRID_PROB_06h config parameters
 #-----------------------------
-task_vx_ensgrid_prob_06h:
+task_run_vx_ensgrid_prob_06h:
   VX_ENSGRID_PROB_06h_TN: "run_ensgridvx_prob_06h"
   NNODES_VX_ENSGRID_PROB: "1"
   PPN_VX_ENSGRID_PROB: "1"
@@ -2058,7 +2058,7 @@ task_vx_ensgrid_prob_06h:
 #----------------------------
 # VX_ENSGRID_PROB_24h config parameters
 #-----------------------------
-task_vx_ensgrid_prob_24h:
+task_run_vx_ensgrid_prob_24h:
   VX_ENSGRID_PROB_24h_TN: "run_ensgridvx_prob_24h"
   NNODES_VX_ENSGRID_PROB: "1"
   PPN_VX_ENSGRID_PROB: "1"
@@ -2068,7 +2068,7 @@ task_vx_ensgrid_prob_24h:
 #----------------------------
 # VX_ENSPOINT config parameters
 #-----------------------------
-task_vx_enspoint:
+task_run_vx_enspoint:
   VX_ENSPOINT_TN: "run_enspointvx"
   NNODES_VX_ENSPOINT: "1"
   PPN_VX_ENSPOINT: "1"
@@ -2078,7 +2078,7 @@ task_vx_enspoint:
 #----------------------------
 # VX_ENSPOINT_MEAN config parameters
 #-----------------------------
-task_vx_enspoint_mean:
+task_run_vx_enspoint_mean:
   VX_ENSPOINT_MEAN_TN: "run_enspointvx_mean"
   NNODES_VX_ENSPOINT_MEAN: "1"
   PPN_VX_ENSPOINT_MEAN: "1"
@@ -2088,7 +2088,7 @@ task_vx_enspoint_mean:
 #----------------------------
 # VX_ENSPOINT_PROB config parameters
 #-----------------------------
-task_vx_enspoint_prob:
+task_run_vx_enspoint_prob:
   VX_ENSPOINT_PROB_TN: "run_enspointvx_prob"
   NNODES_VX_ENSPOINT_PROB: "1"
   PPN_VX_ENSPOINT_PROB: "1"
