More readable yaml config files for WE2E and default configs.

--- a/tests/WE2E/test_configs/wflow_features/config.get_from_HPSS_ics_FV3GFS_lbcs_FV3GFS_fmt_netcdf_2021062000.yaml
+++ b/tests/WE2E/test_configs/wflow_features/config.get_from_HPSS_ics_FV3GFS_lbcs_FV3GFS_fmt_netcdf_2021062000.yaml
@@ -10,8 +10,8 @@ workflow:
   DATE_FIRST_CYCL: '20210620'
   DATE_LAST_CYCL: '20210620'
   CYCL_HRS:
-  - '00'
-  FCST_LEN_HRS: '6'
+  - 0
+  FCST_LEN_HRS: 6
   PREEXISTING_DIR_METHOD: rename
 task_run_fcst:
   PREDEF_GRID_NAME: RRFS_CONUS_25km
@@ -20,5 +20,5 @@ task_get_extrn_ics:
   FV3GFS_FILE_FMT_ICS: netcdf
 task_get_extrn_lbcs:
   EXTRN_MDL_NAME_LBCS: FV3GFS
-  LBC_SPEC_INTVL_HRS: '3'
+  LBC_SPEC_INTVL_HRS: 3
   FV3GFS_FILE_FMT_LBCS: netcdf
