--- a/tests/WE2E/test_configs/grids_extrn_mdls_suites_community/config.grid_RRFS_CONUS_25km_ics_FV3GFS_lbcs_RAP_suite_HRRR.yaml
+++ b/tests/WE2E/test_configs/grids_extrn_mdls_suites_community/config.grid_RRFS_CONUS_25km_ics_FV3GFS_lbcs_RAP_suite_HRRR.yaml
@@ -14,18 +14,18 @@ workflow:
   DATE_FIRST_CYCL: '20200810'
   DATE_LAST_CYCL: '20200810'
   CYCL_HRS:
-  - '00'
-  FCST_LEN_HRS: '6'
+  - 0
+  FCST_LEN_HRS: 6
   PREEXISTING_DIR_METHOD: rename
 task_run_fcst:
   PREDEF_GRID_NAME: RRFS_CONUS_25km
 task_get_extrn_ics:
   EXTRN_MDL_NAME_ICS: FV3GFS
   FV3GFS_FILE_FMT_ICS: grib2
-  USE_USER_STAGED_EXTRN_FILES: 'TRUE'
+  USE_USER_STAGED_EXTRN_FILES: true
 task_get_extrn_lbcs:
   EXTRN_MDL_NAME_LBCS: RAP
-  LBC_SPEC_INTVL_HRS: '1'
-  USE_USER_STAGED_EXTRN_FILES: 'TRUE'
+  LBC_SPEC_INTVL_HRS: 1
+  USE_USER_STAGED_EXTRN_FILES: true
   EXTRN_MDL_FILES_LBCS:
   - '{yy}{jjj}{hh}00{fcst_hr:02d}00'
