--- a/tests/WE2E/test_configs/grids_extrn_mdls_suites_community/config.grid_RRFS_CONUScompact_3km_ics_HRRR_lbcs_RAP_suite_RRFS_v1alpha.yaml
+++ b/tests/WE2E/test_configs/grids_extrn_mdls_suites_community/config.grid_RRFS_CONUScompact_3km_ics_HRRR_lbcs_RAP_suite_RRFS_v1alpha.yaml
@@ -11,19 +11,19 @@ workflow:
   DATE_FIRST_CYCL: '20200801'
   DATE_LAST_CYCL: '20200801'
   CYCL_HRS:
-  - '00'
-  FCST_LEN_HRS: '6'
+  - 0
+  FCST_LEN_HRS: 6
   PREEXISTING_DIR_METHOD: rename
 task_run_fcst:
   PREDEF_GRID_NAME: RRFS_CONUScompact_3km
 task_get_extrn_ics:
   EXTRN_MDL_NAME_ICS: HRRR
-  USE_USER_STAGED_EXTRN_FILES: 'TRUE'
+  USE_USER_STAGED_EXTRN_FILES: true
   EXTRN_MDL_FILES_ICS:
   - '{yy}{jjj}{hh}00{fcst_hr:02d}00'
 task_get_extrn_lbcs:
   EXTRN_MDL_NAME_LBCS: RAP
-  LBC_SPEC_INTVL_HRS: '3'
-  USE_USER_STAGED_EXTRN_FILES: 'TRUE'
+  LBC_SPEC_INTVL_HRS: 3
+  USE_USER_STAGED_EXTRN_FILES: true
   EXTRN_MDL_FILES_LBCS:
   - '{yy}{jjj}{hh}00{fcst_hr:02d}00'
