--- a/tests/WE2E/test_configs/grids_extrn_mdls_suites_nco/config.nco_grid_RRFS_CONUS_3km_ics_FV3GFS_lbcs_FV3GFS_suite_GFS_v15_thompson_mynn_lam3km.yaml
+++ b/tests/WE2E/test_configs/grids_extrn_mdls_suites_nco/config.nco_grid_RRFS_CONUS_3km_ics_FV3GFS_lbcs_FV3GFS_suite_GFS_v15_thompson_mynn_lam3km.yaml
@@ -10,16 +10,16 @@ workflow:
   DATE_FIRST_CYCL: '20190615'
   DATE_LAST_CYCL: '20190615'
   CYCL_HRS:
-  - '00'
-  FCST_LEN_HRS: '6'
+  - 0
+  FCST_LEN_HRS: 6
   PREEXISTING_DIR_METHOD: rename
 task_run_fcst:
   PREDEF_GRID_NAME: RRFS_CONUS_3km
-  USE_MERRA_CLIMO: 'TRUE'
+  USE_MERRA_CLIMO: true
 task_get_extrn_ics:
   EXTRN_MDL_NAME_ICS: FV3GFS
   FV3GFS_FILE_FMT_ICS: grib2
 task_get_extrn_lbcs:
   EXTRN_MDL_NAME_LBCS: FV3GFS
-  LBC_SPEC_INTVL_HRS: '3'
+  LBC_SPEC_INTVL_HRS: 3
   FV3GFS_FILE_FMT_LBCS: grib2
