--- a/tests/WE2E/test_configs/wflow_features/config.MET_verification.yaml
+++ b/tests/WE2E/test_configs/wflow_features/config.MET_verification.yaml
@@ -11,21 +11,21 @@ workflow:
   DATE_FIRST_CYCL: '20190615'
   DATE_LAST_CYCL: '20190615'
   CYCL_HRS:
-  - '00'
-  FCST_LEN_HRS: '6'
+  - 0
+  FCST_LEN_HRS: 6
   PREEXISTING_DIR_METHOD: rename
 workflow_switches:
-  RUN_TASK_VX_GRIDSTAT: 'TRUE'
-  RUN_TASK_VX_POINTSTAT: 'TRUE'
+  RUN_TASK_VX_GRIDSTAT: true
+  RUN_TASK_VX_POINTSTAT: true
 task_run_fcst:
   WTIME_RUN_FCST: 01:00:00
   PREDEF_GRID_NAME: RRFS_CONUS_25km
 task_get_extrn_ics:
   EXTRN_MDL_NAME_ICS: FV3GFS
   FV3GFS_FILE_FMT_ICS: grib2
-  USE_USER_STAGED_EXTRN_FILES: 'TRUE'
+  USE_USER_STAGED_EXTRN_FILES: true
 task_get_extrn_lbcs:
   EXTRN_MDL_NAME_LBCS: FV3GFS
-  LBC_SPEC_INTVL_HRS: '6'
+  LBC_SPEC_INTVL_HRS: 6
   FV3GFS_FILE_FMT_LBCS: grib2
-  USE_USER_STAGED_EXTRN_FILES: 'TRUE'
+  USE_USER_STAGED_EXTRN_FILES: true
