--- a/tests/WE2E/test_configs/wflow_features/config.custom_GFDLgrid__GFDLgrid_USE_GFDLgrid_RES_IN_FILENAMES_eq_FALSE.yaml
+++ b/tests/WE2E/test_configs/wflow_features/config.custom_GFDLgrid__GFDLgrid_USE_GFDLgrid_RES_IN_FILENAMES_eq_FALSE.yaml
@@ -15,43 +15,43 @@ workflow:
   DATE_FIRST_CYCL: '20190701'
   DATE_LAST_CYCL: '20190701'
   CYCL_HRS:
-  - '00'
-  FCST_LEN_HRS: '6'
+  - 0
+  FCST_LEN_HRS: 6
   PREEXISTING_DIR_METHOD: rename
 task_run_fcst:
-  DT_ATMOS: '100'
-  LAYOUT_X: '6'
-  LAYOUT_Y: '6'
-  BLOCKSIZE: '26'
-  QUILTING: 'TRUE'
-  WRTCMP_write_groups: '1'
-  WRTCMP_write_tasks_per_group: '6'
+  DT_ATMOS: 100
+  LAYOUT_X: 6
+  LAYOUT_Y: 6
+  BLOCKSIZE: 26
+  QUILTING: true
+  WRTCMP_write_groups: 1
+  WRTCMP_write_tasks_per_group: 6
   WRTCMP_output_grid: rotated_latlon
-  WRTCMP_cen_lon: '-97.5'
-  WRTCMP_cen_lat: '38.5'
-  WRTCMP_lon_lwr_left: '-25.0'
-  WRTCMP_lat_lwr_left: '-15.0'
-  WRTCMP_lon_upr_rght: '25.0'
-  WRTCMP_lat_upr_rght: '15.0'
-  WRTCMP_dlon: '0.24'
-  WRTCMP_dlat: '0.24'
+  WRTCMP_cen_lon: -97.5
+  WRTCMP_cen_lat: 38.5
+  WRTCMP_lon_lwr_left: -25.0
+  WRTCMP_lat_lwr_left: -15.0
+  WRTCMP_lon_upr_rght: 25.0
+  WRTCMP_lat_upr_rght: 15.0
+  WRTCMP_dlon: 0.24
+  WRTCMP_dlat: 0.24
 task_get_extrn_ics:
   EXTRN_MDL_NAME_ICS: FV3GFS
-  USE_USER_STAGED_EXTRN_FILES: 'TRUE'
+  USE_USER_STAGED_EXTRN_FILES: true
 task_get_extrn_lbcs:
   EXTRN_MDL_NAME_LBCS: FV3GFS
-  LBC_SPEC_INTVL_HRS: '3'
-  USE_USER_STAGED_EXTRN_FILES: 'TRUE'
+  LBC_SPEC_INTVL_HRS: 3
+  USE_USER_STAGED_EXTRN_FILES: true
 task_make_grid:
-  GFDLgrid_LON_T6_CTR: '-97.5'
-  GFDLgrid_LAT_T6_CTR: '38.5'
-  GFDLgrid_RES: '96'
-  GFDLgrid_STRETCH_FAC: '1.5'
-  GFDLgrid_REFINE_RATIO: '2'
-  GFDLgrid_ISTART_OF_RGNL_DOM_ON_T6G: '10'
-  GFDLgrid_IEND_OF_RGNL_DOM_ON_T6G: '87'
-  GFDLgrid_JSTART_OF_RGNL_DOM_ON_T6G: '10'
-  GFDLgrid_JEND_OF_RGNL_DOM_ON_T6G: '87'
-  GFDLgrid_USE_GFDLgrid_RES_IN_FILENAMES: 'FALSE'
+  GFDLgrid_LON_T6_CTR: -97.5
+  GFDLgrid_LAT_T6_CTR: 38.5
+  GFDLgrid_RES: 96
+  GFDLgrid_STRETCH_FAC: 1.5
+  GFDLgrid_REFINE_RATIO: 2
+  GFDLgrid_ISTART_OF_RGNL_DOM_ON_T6G: 10
+  GFDLgrid_IEND_OF_RGNL_DOM_ON_T6G: 87
+  GFDLgrid_JSTART_OF_RGNL_DOM_ON_T6G: 10
+  GFDLgrid_JEND_OF_RGNL_DOM_ON_T6G: 87
+  GFDLgrid_USE_GFDLgrid_RES_IN_FILENAMES: false
 task_run_post:
   POST_OUTPUT_DOMAIN_NAME: custom_GFDLgrid
