--- a/tests/WE2E/test_configs/wflow_features/config.deactivate_tasks.yaml
+++ b/tests/WE2E/test_configs/wflow_features/config.deactivate_tasks.yaml
@@ -27,22 +27,22 @@ workflow:
   DATE_FIRST_CYCL: '20190701'
   DATE_LAST_CYCL: '20190701'
   CYCL_HRS:
-  - '00'
-  FCST_LEN_HRS: '6'
+  - 0
+  FCST_LEN_HRS: 6
   PREEXISTING_DIR_METHOD: rename
 workflow_switches:
-  RUN_TASK_GET_EXTRN_ICS: 'FALSE'
-  RUN_TASK_GET_EXTRN_LBCS: 'FALSE'
-  RUN_TASK_MAKE_ICS: 'FALSE'
-  RUN_TASK_MAKE_LBCS: 'FALSE'
-  RUN_TASK_RUN_FCST: 'FALSE'
-  RUN_TASK_RUN_POST: 'FALSE'
+  RUN_TASK_GET_EXTRN_ICS: false
+  RUN_TASK_GET_EXTRN_LBCS: false
+  RUN_TASK_MAKE_ICS: false
+  RUN_TASK_MAKE_LBCS: false
+  RUN_TASK_RUN_FCST: false
+  RUN_TASK_RUN_POST: false
 task_run_fcst:
   PREDEF_GRID_NAME: RRFS_CONUS_25km
 task_get_extrn_ics:
   EXTRN_MDL_NAME_ICS: FV3GFS
-  USE_USER_STAGED_EXTRN_FILES: 'TRUE'
+  USE_USER_STAGED_EXTRN_FILES: true
 task_get_extrn_lbcs:
   EXTRN_MDL_NAME_LBCS: FV3GFS
-  LBC_SPEC_INTVL_HRS: '3'
-  USE_USER_STAGED_EXTRN_FILES: 'TRUE'
+  LBC_SPEC_INTVL_HRS: 3
+  USE_USER_STAGED_EXTRN_FILES: true
