--- a/tests/WE2E/test_configs/wflow_features/config.get_from_HPSS_ics_FV3GFS_lbcs_FV3GFS_fmt_grib2_2020022518.yaml
+++ b/tests/WE2E/test_configs/wflow_features/config.get_from_HPSS_ics_FV3GFS_lbcs_FV3GFS_fmt_grib2_2020022518.yaml
@@ -12,8 +12,8 @@ workflow:
   DATE_FIRST_CYCL: '20200225'
   DATE_LAST_CYCL: '20200225'
   CYCL_HRS:
-  - '18'
-  FCST_LEN_HRS: '6'
+  - 18
+  FCST_LEN_HRS: 6
   PREEXISTING_DIR_METHOD: rename
 task_run_fcst:
   PREDEF_GRID_NAME: RRFS_CONUS_25km
@@ -22,5 +22,5 @@ task_get_extrn_ics:
   FV3GFS_FILE_FMT_ICS: grib2
 task_get_extrn_lbcs:
   EXTRN_MDL_NAME_LBCS: FV3GFS
-  LBC_SPEC_INTVL_HRS: '3'
+  LBC_SPEC_INTVL_HRS: 3
   FV3GFS_FILE_FMT_LBCS: grib2
