--- a/tests/WE2E/test_configs/wflow_features/config.get_from_HPSS_ics_RAP_lbcs_RAP.yaml
+++ b/tests/WE2E/test_configs/wflow_features/config.get_from_HPSS_ics_RAP_lbcs_RAP.yaml
@@ -10,8 +10,8 @@ workflow:
   DATE_FIRST_CYCL: '20190520'
   DATE_LAST_CYCL: '20190520'
   CYCL_HRS:
-  - '00'
-  FCST_LEN_HRS: '6'
+  - 0
+  FCST_LEN_HRS: 6
   PREEXISTING_DIR_METHOD: rename
 task_run_fcst:
   PREDEF_GRID_NAME: RRFS_CONUS_25km
@@ -19,4 +19,4 @@ task_get_extrn_ics:
   EXTRN_MDL_NAME_ICS: RAP
 task_get_extrn_lbcs:
   EXTRN_MDL_NAME_LBCS: RAP
-  LBC_SPEC_INTVL_HRS: '3'
+  LBC_SPEC_INTVL_HRS: 3
