--- a/tests/WE2E/test_configs/wflow_features/config.get_from_NOMADS_ics_FV3GFS_lbcs_FV3GFS_fmt_nemsio.yaml
+++ b/tests/WE2E/test_configs/wflow_features/config.get_from_NOMADS_ics_FV3GFS_lbcs_FV3GFS_fmt_nemsio.yaml
@@ -10,17 +10,17 @@ workflow:
   DATE_FIRST_CYCL: '20200826'
   DATE_LAST_CYCL: '20200826'
   CYCL_HRS:
-  - '00'
-  FCST_LEN_HRS: '6'
+  - 0
+  FCST_LEN_HRS: 6
   PREEXISTING_DIR_METHOD: rename
 task_run_fcst:
   PREDEF_GRID_NAME: RRFS_CONUS_25km
 task_get_extrn_ics:
   EXTRN_MDL_NAME_ICS: FV3GFS
-  NOMADS: 'TRUE'
+  NOMADS: true
   NOMADS_file_type: NEMSIO
 task_get_extrn_lbcs:
   EXTRN_MDL_NAME_LBCS: FV3GFS
-  LBC_SPEC_INTVL_HRS: '3'
-  NOMADS: 'TRUE'
+  LBC_SPEC_INTVL_HRS: 3
+  NOMADS: true
   NOMADS_file_type: NEMSIO
