--- a/tests/WE2E/test_configs/wflow_features/config.specify_EXTRN_MDL_SYSBASEDIR_ICS_LBCS.yaml
+++ b/tests/WE2E/test_configs/wflow_features/config.specify_EXTRN_MDL_SYSBASEDIR_ICS_LBCS.yaml
@@ -10,8 +10,8 @@ workflow:
   DATE_FIRST_CYCL: '20210615'
   DATE_LAST_CYCL: '20210615'
   CYCL_HRS:
-  - '00'
-  FCST_LEN_HRS: '6'
+  - 0
+  FCST_LEN_HRS: 6
   PREEXISTING_DIR_METHOD: rename
 task_run_fcst:
   PREDEF_GRID_NAME: RRFS_CONUS_25km
@@ -21,6 +21,6 @@ task_get_extrn_ics:
   EXTRN_MDL_SYSBASEDIR_ICS: set_to_non_default_location_in_testing_script
 task_get_extrn_lbcs:
   EXTRN_MDL_NAME_LBCS: FV3GFS
-  LBC_SPEC_INTVL_HRS: '3'
+  LBC_SPEC_INTVL_HRS: 3
   FV3GFS_FILE_FMT_LBCS: grib2
   EXTRN_MDL_SYSBASEDIR_LBCS: set_to_non_default_location_in_testing_script
