--- a/tests/WE2E/test_configs/wflow_features/config.subhourly_post.yaml
+++ b/tests/WE2E/test_configs/wflow_features/config.subhourly_post.yaml
@@ -9,23 +9,23 @@ workflow:
   DATE_FIRST_CYCL: '20200810'
   DATE_LAST_CYCL: '20200810'
   CYCL_HRS:
-  - '00'
-  FCST_LEN_HRS: '3'
+  - 0
+  FCST_LEN_HRS: 3
   PREEXISTING_DIR_METHOD: rename
 task_run_fcst:
-  DT_ATMOS: '120'
+  DT_ATMOS: 120
   PREDEF_GRID_NAME: RRFS_CONUScompact_25km
 task_get_extrn_ics:
   EXTRN_MDL_NAME_ICS: HRRR
-  USE_USER_STAGED_EXTRN_FILES: 'TRUE'
+  USE_USER_STAGED_EXTRN_FILES: true
   EXTRN_MDL_FILES_ICS:
   - '{yy}{jjj}{hh}00{fcst_hr:02d}00'
 task_get_extrn_lbcs:
   EXTRN_MDL_NAME_LBCS: RAP
-  LBC_SPEC_INTVL_HRS: '1'
-  USE_USER_STAGED_EXTRN_FILES: 'TRUE'
+  LBC_SPEC_INTVL_HRS: 1
+  USE_USER_STAGED_EXTRN_FILES: true
   EXTRN_MDL_FILES_LBCS:
   - '{yy}{jjj}{hh}00{fcst_hr:02d}00'
 task_run_post:
-  SUB_HOURLY_POST: 'TRUE'
-  DT_SUBHOURLY_POST_MNTS: '2'
+  SUB_HOURLY_POST: true
+  DT_SUBHOURLY_POST_MNTS: 2
