--- a/ush/config.community.yaml
+++ b/ush/config.community.yaml
@@ -18,33 +18,33 @@ workflow:
   DATE_FIRST_CYCL: '20190615'
   DATE_LAST_CYCL: '20190615'
   CYCL_HRS:
-  - '18'
-  FCST_LEN_HRS: '12'
+  - 18
+  FCST_LEN_HRS: 12
   PREEXISTING_DIR_METHOD: rename
-  VERBOSE: 'TRUE'
+  VERBOSE: true
   COMPILER: intel
 workflow_switches:
-  RUN_TASK_MAKE_GRID: 'TRUE'
-  RUN_TASK_MAKE_OROG: 'TRUE'
-  RUN_TASK_MAKE_SFC_CLIMO: 'TRUE'
-  RUN_TASK_GET_OBS_CCPA: 'FALSE'
-  RUN_TASK_GET_OBS_MRMS: 'FALSE'
-  RUN_TASK_GET_OBS_NDAS: 'FALSE'
-  RUN_TASK_VX_GRIDSTAT: 'FALSE'
-  RUN_TASK_VX_POINTSTAT: 'FALSE'
-  RUN_TASK_VX_ENSGRID: 'FALSE'
-  RUN_TASK_VX_ENSPOINT: 'FALSE'
+  RUN_TASK_MAKE_GRID: true
+  RUN_TASK_MAKE_OROG: true
+  RUN_TASK_MAKE_SFC_CLIMO: true
+  RUN_TASK_GET_OBS_CCPA: false
+  RUN_TASK_GET_OBS_MRMS: false
+  RUN_TASK_GET_OBS_NDAS: false
+  RUN_TASK_VX_GRIDSTAT: false
+  RUN_TASK_VX_POINTSTAT: false
+  RUN_TASK_VX_ENSGRID: false
+  RUN_TASK_VX_ENSPOINT: false
 task_run_fcst:
   WTIME_RUN_FCST: 02:00:00
-  QUILTING: 'TRUE'
+  QUILTING: true
   PREDEF_GRID_NAME: RRFS_CONUS_25km
 task_get_extrn_ics:
   EXTRN_MDL_NAME_ICS: FV3GFS
   FV3GFS_FILE_FMT_ICS: grib2
 task_get_extrn_lbcs:
   EXTRN_MDL_NAME_LBCS: FV3GFS
-  LBC_SPEC_INTVL_HRS: '6'
+  LBC_SPEC_INTVL_HRS: 6
   FV3GFS_FILE_FMT_LBCS: grib2
 global:
-  DO_ENSEMBLE: 'FALSE'
-  NUM_ENS_MEMBERS: '2'
+  DO_ENSEMBLE: false
+  NUM_ENS_MEMBERS: 2
