--- a/tests/WE2E/test_configs/grids_extrn_mdls_suites_community/config.grid_RRFS_NA_3km_ics_FV3GFS_lbcs_FV3GFS_suite_RRFS_v1beta.yaml
+++ b/tests/WE2E/test_configs/grids_extrn_mdls_suites_community/config.grid_RRFS_NA_3km_ics_FV3GFS_lbcs_FV3GFS_suite_RRFS_v1beta.yaml
@@ -1,7 +1,7 @@
 metadata:
   description: >-
     This test is to ensure that the workflow running in community mode
-    completes successfully on the RRFS_NA_3km grid using the RRFS_v1alpha
+    completes successfully on the RRFS_NA_3km grid using the RRFS_v1beta
     physics suite with ICs and LBCs derived from the FV3GFS.
     Note that this test also sets various resource parameters for several
     of the rocoto tasks in order to more efficiently run the code on this
@@ -9,7 +9,7 @@ metadata:
 user:
   RUN_ENVIR: community
 workflow:
-  CCPP_PHYS_SUITE: FV3_RRFS_v1alpha
+  CCPP_PHYS_SUITE: FV3_RRFS_v1beta
   DATE_FIRST_CYCL: '20190701'
   DATE_LAST_CYCL: '20190701'
   CYCL_HRS:
