--- a/tests/WE2E/test_configs/wflow_features/config.custom_GFDLgrid.yaml
+++ b/tests/WE2E/test_configs/wflow_features/config.custom_GFDLgrid.yaml
@@ -5,8 +5,8 @@ metadata:
     workflow) of GFDLgrid type.  Note that this test sets the workflow
     variable
       GFDLgrid_USE_NUM_CELLS_IN_FILENAMES
-    to "TRUE" (which is its default value); see the UFS SRW User's Guide
-    for a description of this variable.
+    to "TRUE" (which is its default value); see the UFS SRW App's User's
+    Guide for a description of this variable.
     The difference between this test and the one named
       custom_GFDLgrid__GFDLgrid_USE_NUM_CELLS_IN_FILENAMES_eq_TRUE
     is that this one uses almost no stretching by setting the workflow
