--- a/tests/WE2E/test_configs/grids_extrn_mdls_suites_community/config.grid_RRFS_CONUS_3km_ics_FV3GFS_lbcs_FV3GFS_suite_GFS_v16.yaml
+++ b/tests/WE2E/test_configs/grids_extrn_mdls_suites_community/config.grid_RRFS_CONUS_3km_ics_FV3GFS_lbcs_FV3GFS_suite_GFS_v16.yaml
@@ -1,5 +1,5 @@
 metadata:
-  description: >-
+  description: |-
     This test is to ensure that the workflow running in community mode
     completes successfully on the RRFS_CONUS_3km grid using the GFS_v16
     physics suite with ICs and LBCs derived from the FV3GFS.
