--- a/tests/WE2E/test_configs/release_SRW_v1/config.GST_release_public_v1.yaml
+++ b/tests/WE2E/test_configs/release_SRW_v1/config.GST_release_public_v1.yaml
@@ -1,5 +1,5 @@
 metadata:
-  description: >-
+  description: |-
     This test is to ensure that the workflow successfully completes the
     Graduate Student Test (GST) included in Release 1 of the UFS SRW App.
 user:
