--- a/tests/WE2E/test_configs/wflow_features/config.deactivate_tasks.yaml
+++ b/tests/WE2E/test_configs/wflow_features/config.deactivate_tasks.yaml
@@ -1,5 +1,5 @@
 metadata:
-  description: >-
+  description: |-
     This test has two purposes:
     1) It checks that the various workflow tasks can be deactivated, i.e.
        removed from the Rocoto XML.
