--- a/tests/WE2E/test_configs/grids_extrn_mdls_suites_community/config.grid_RRFS_SUBCONUS_3km_ics_HRRR_lbcs_RAP_suite_GFS_v15p2.yaml
+++ b/tests/WE2E/test_configs/grids_extrn_mdls_suites_community/config.grid_RRFS_SUBCONUS_3km_ics_HRRR_lbcs_RAP_suite_GFS_v15p2.yaml
@@ -1,5 +1,5 @@
 metadata:
-  description: >-
+  description: |-
     This test is to ensure that the workflow running in community mode
     completes successfully on the RRFS_SUBCONUS_3km grid using the GFS_v15p2
     physics suite with ICs derived from the HRRR and LBCs derived from the
