--- a/tests/WE2E/test_configs/wflow_features/config.MET_verification.yaml
+++ b/tests/WE2E/test_configs/wflow_features/config.MET_verification.yaml
@@ -1,5 +1,5 @@
 metadata:
-  description: >-
+  description: |-
     This test is to ensure that the workflow running in community mode
     completes successfully with MET verification.
 user:
