--- a/tests/WE2E/test_configs/wflow_features/config.community_ensemble_2mems.yaml
+++ b/tests/WE2E/test_configs/wflow_features/config.community_ensemble_2mems.yaml
@@ -1,5 +1,5 @@
 metadata:
-  description: >-
+  description: |-
     This test checks the capability of the workflow to run ensemble forecasts
     (i.e. DO_ENSEMBLE set to "TRUE") in community mode (i.e. RUN_ENVIR set
     to "community") with the number of ensemble members (NUM_ENS_MEMBERS)
