--- a/tests/WE2E/test_configs/wflow_features/config.pregen_grid_orog_sfc_climo.yaml
+++ b/tests/WE2E/test_configs/wflow_features/config.pregen_grid_orog_sfc_climo.yaml
@@ -1,5 +1,5 @@
 metadata:
-  description: >-
+  description: |-
     This test checks the capability of the workflow to use pregenerated
     grid, orography, and surface climatology files.
 user:
