--- a/tests/WE2E/test_configs/wflow_features/config.specify_template_filenames.yaml
+++ b/tests/WE2E/test_configs/wflow_features/config.specify_template_filenames.yaml
@@ -1,5 +1,5 @@
 metadata:
-  description: >-
+  description: |-
     This test checks the capability of the workflow to use user-defined
     template files.
 user:
