--- a/tests/WE2E/test_configs/wflow_features/config.subhourly_post_ensemble_2mems.yaml
+++ b/tests/WE2E/test_configs/wflow_features/config.subhourly_post_ensemble_2mems.yaml
@@ -1,5 +1,5 @@
 metadata:
-  description: >-
+  description: |-
     This test checks the capability of the workflow to run ensemble forecasts
     that require the forecast model to write output files and perform post-
     processing on a sub-hourly time interval.
