Last set of Jamie suggestions, updated for new test dataset

--- a/ush/templates/parm/metplus/GridDiag_2vars.conf
+++ b/ush/templates/parm/metplus/GridDiag_2vars.conf
@@ -63,7 +63,7 @@ BOTH_VAR2_OPTIONS = {ENV[VAR2_OPTS]}
 # configuration file used by this example
 # Leaving these values commented will use the value
 # found in the default MET configuration file
-GRID_DIAG_REGRID_TO_GRID = /scratch2/BMC/fv3lam/RRFS_baseline/static/MET/masks/CONUS.nc 
+GRID_DIAG_REGRID_TO_GRID = /scratch1/BMC/hmtb/beck/jtti/static/MET/met_config/masks/CONUS.nc
 #GRID_DIAG_REGRID_METHOD = BUDGET 
 #GRID_DIAG_REGRID_WIDTH = 2 
 #GRID_DIAG_REGRID_VLD_THRESH = 0.5
@@ -79,9 +79,11 @@ GRID_DIAG_OUTPUT_DIR = {OUTPUT_BASE}
 
 [filename_templates]
 
+#RRFSE_CONUS.t00z.bgdawpf036.tm00.grib2
 #EchoTop_18_00.50_20191201-010000.grib2
 #MergedReflectivityQCComposite_00.50_20191201-010000.grib2
-GRID_DIAG_INPUT_TEMPLATE = expt_dirs/RRFS_baseline_{SEASON}/{init?fmt=%Y%m%d%H}/postprd/{ENV[NET]}.t{init?fmt=%H}z.bgdawpf{lead?fmt=%HHH}.tm{init?fmt=%H}.grib2, expt_dirs/RRFS_baseline_{SEASON}/{init?fmt=%Y%m%d%H}/postprd/{ENV[NET]}.t{init?fmt=%H}z.bgdawpf{lead?fmt=%HHH}.tm{init?fmt=%H}.grib2
+#GRID_DIAG_INPUT_TEMPLATE = expt_dirs/RRFS_baseline_{SEASON}/{init?fmt=%Y%m%d%H}/postprd/{ENV[NET]}.t{init?fmt=%H}z.bgdawpf{lead?fmt=%HHH}.tm{init?fmt=%H}.grib2, expt_dirs/RRFS_baseline_{SEASON}/{init?fmt=%Y%m%d%H}/postprd/{ENV[NET]}.t{init?fmt=%H}z.bgdawpf{lead?fmt=%HHH}.tm{init?fmt=%H}.grib2
+GRID_DIAG_INPUT_TEMPLATE = data/{init?fmt=%Y%m%d%H}/mem1/postprd/{ENV[NET]}.t{init?fmt=%H}z.bgdawpf{lead?fmt=%HHH}.tm{init?fmt=%H}.grib2
 
 GRID_DIAG_OUTPUT_TEMPLATE = grid_diag_out_{MODEL}_{ENV[VAR1]}_{ENV[VAR1_LEV]}-{ENV[VAR2]}_{ENV[VAR2_LEV]}_{ENV[INIT_BEG]}-{ENV[INIT_END]}_f{ENV[FHR_FIRST]}-{ENV[FHR_LAST]}.nc
 #when using RUN_ONCE
@@ -90,4 +92,4 @@ GRID_DIAG_OUTPUT_TEMPLATE = grid_diag_out_{MODEL}_{ENV[VAR1]}_{ENV[VAR1_LEV]}-{E
 # when using RUN_ONCE_PER_LEAD
 #GRID_DIAG_OUTPUT_TEMPLATE = grid_diag_out_{MODEL}_{init?fmt=%Y%m%d%H}_F{lead?fmt=%3H}.nc when using RUN_ONCE_FOR_EACH
 
-GRID_DIAG_VERIFICATION_MASK_TEMPLATE = /scratch2/BMC/fv3lam/RRFS_baseline/static/MET/masks/CONUS.nc
+GRID_DIAG_VERIFICATION_MASK_TEMPLATE = /scratch1/BMC/hmtb/beck/jtti/static/MET/met_config/masks/CONUS.nc
